--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- <h1>Kaayakalpam</h1> -->
             <h3 class="display-3" data-aos="fade-up" data-aos-delay="200">Rejuvenate Your Mind, Body & Soul with Ayurveda</h3>
             <p data-aos="fade-up" data-aos-delay="400">Experience the harmony of nature with our authentic herbal solutions and wellness therapies.</p>
-            <img class="hero_image mt-2" src="../images/hero_circle_img.jpg" alt="" data-aos="zoom-in" data-aos-delay="600">
+            <img class="hero_image mt-2" src="/images/hero_circle_img.jpg" alt="" data-aos="zoom-in" data-aos-delay="600">
         </div>
     </section>
     
