--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-lg-4 text-center" data-aos="zoom-in" data-aos-delay="400">
                     <div class="about_img">
-                        <img src="../images/About_img1.jpg" alt="About Kaayakalpam">
+                      <img src="https://drive.google.com/uc?export=view&id=1k6uQLJv8s7BhlaIAzgV_1q-QQlsVeafo" alt="About Kaayakalpam">
                     </div>
                 </div>
             </div>
